--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+## Suggestotron
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+### Origin
 
-Things you may want to cover:
+I made this app at Railsbridge Oakland.
 
-* Ruby version
+### Usage
 
-* System dependencies
+Just clone this repo and remember to run rake db:migrate and you have a stunning voting application.
 
-* Configuration
+### Contribution
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+I'm trying to learn, if you have any tips, send me a pull request!
